# wasm34j

./: .gitignore  .gitmodules  README.md  checkstyle-suppressions.xml  checkstyle.xml  pom.xml  spotbugs-exclude.xml  spotbugs-include.xml  spotless-license-header.txt
.github/workflows/: android.yml  ci.yml  release.yml
wasm34j/: pom.xml
wasm34j-android/: build.gradle.kts  settings.gradle.kts
wasm34j-android/src/androidTest/java/ai/tegmentum/wasm34j/android/: Wasm3AndroidTest.java
wasm34j-jni/: pom.xml
wasm34j-jni/src/main/java/ai/tegmentum/wasm34j/jni/: JniRuntimeProvider.java
wasm34j-native/: CMakeLists.txt  pom.xml
wasm34j-native/src/: wasm34j_jni.c
wasm34j-panama/: pom.xml
wasm34j-panama/src/main/java/ai/tegmentum/wasm34j/panama/: PanamaRuntimeProvider.java
wasm34j-panama/src/test/java/ai/tegmentum/wasm34j/panama/: PanamaAddTest.java  PanamaFeaturesTest.java  PanamaLifecycleTest.java
wasm34j-panama/src/test/resources/: global.wasm  global.wat  mem.wat
wasm34j-tests/: pom.xml
wasm34j-tests/src/test/java/ai/tegmentum/wasm34j/: AddIntegrationTest.java  FeaturesTest.java  LifecycleTest.java
wasm34j-tests/src/test/resources/: add.wat  host.wasm  host.wat
wasm34j/src/main/java/ai/tegmentum/wasm34j/: FunctionType.java  HostFunction.java  HostFunctionDefinition.java  RuntimeFactory.java  ValueType.java  WasmGlobal.java  WasmImports.java  WasmValue.java  WebAssemblyFunction.java  WebAssemblyInstance.java  WebAssemblyMemory.java  WebAssemblyModule.java  WebAssemblyRuntime.java
wasm34j/src/main/resources/: wasm34j.properties
(+23 files in other folders)
